# cmaketools

./: CMakeLists.txt  Dockerfile  calculator  main.cpp  main1.cpp  print_result.cpp
.devcontainer/: devcontainer.json
Daniel/ep1/: main.cpp
JEFFERESON/: CMakeLists.txt  main.cpp
my_math/: CMakeLists.txt
